--- a/androidApp/src/main/res/values-v31/styles.xml
+++ b/androidApp/src/main/res/values-v31/styles.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:background">#FF0E1016</item>
         <item name="android:windowBackground">#FF0E1016</item>
+        <item name="android:windowSplashScreenBackground">#FF0E1016</item>
     </style>
 </resources>
